--- a/.travis.yml
+++ b/.travis.yml
@@ -4,23 +4,8 @@ branches:
   only:
     - master
 before_install:
-  - export LANG=en_US.UTF-8
-  - brew update
-  - gem install cocoapods -v 1.5.3
-  - gem install specific_install
+  - bundle install
 install:
-  - pod repo update
-  - cd ${TEST_SUITE} && pod install && cd ..
-env:
-  global:
-    - DESTINATION="platform=iOS Simulator,name=iPhone 7,OS=10.0"
-    - IOS_SDK="iphonesimulator11.0"
-    - SCHEME="Tests"
-    - TEST_SUITE="Tests"
+  - fastlane install
 script:
-  - xcodebuild
-    -workspace "${TEST_SUITE}/${TEST_SUITE}.xcworkspace"
-    -scheme "${SCHEME}"
-    -sdk "${IOS_SDK}"
-    -destination "${DESTINATION}"
-    clean build test | xcpretty -c
+  - fastlane test
